Make template boilerplate

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,14 @@
     <title>DIFT12</title>
 </head>
 <body>
-    
+    <nav class="navbar">
+        <button id="me">me</button>
+        <button id="project">project</button>
+        <button id="stack">stack</button>
+        <button id="contact">contact</button>
+    </nav>
+    <main id="content">
+        
+    </main>
 </body>
 </html>
