--- a/src/template.html
+++ b/src/template.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <nav class="navbar">
-        <button id="me">me</button>
-        <button id="project">project</button>
-        <button id="stack">stack</button>
-        <button id="contact">contact</button>
+        <button class="command" id="me">me</button>
+        <button class="command" id="work">work</button>
+        <button class="command" id="stack">stack</button>
+        <button class="command" id="contact">contact</button>
     </nav>
     <main id="content">
-        <h1>DIFT12</h1>
+        
     </main>
     <div class="blob-filter">
 
@@ -36,9 +36,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
             <defs>
               <filter id="goo">
-                <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
                 <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                <feBlend in="SourceGraphic" in2="goo" />
               </filter>
             </defs>
           </svg>
