Set transform to null, to check if this solves safari mobile issues

--- a/src/template.html
+++ b/src/template.html
@@ -15,7 +15,7 @@
     <main id="content">
 
     </main>
-    <div class="blob-filter" style="filter:url('#goo')">
+    <div class="blob-filter" style="transform: translate(0,0);">
 
         <div class="lamp">
             <div class="blob">
